@@ -69,7 +69,8 @@ trap "rm -r $tmpdir" EXIT	# remove temporary directory on exit
 
 mkdir $tmpdir
 if [ $use_temp_dir == true ] ; then 
-    cp -r $slimedir/*.{el,lisp} ChangeLog $slimedir/contrib $tmpdir
+    cp -r $slimedir/*.{el,lisp} ChangeLog $tmpdir 
+    # cp -r $slimedir/contrib $tmpdir 
 fi
 
 cmd=($emacs -nw -q -no-site-file $batch_mode --no-site-file
