@@ -1,5 +1,11 @@
 2009-10-28  Helmut Eller  <heller@common-lisp.net>
 
+	* test.sh: Don't copy contribs. Slime should work without them.
+	* swank-loader.lisp (setup): Compile contribs only if directory
+	exists.
+
+2009-10-28  Helmut Eller  <heller@common-lisp.net>
+
 	* slime.el (slime-format-display-message, slime-display-message)
 	(slime-create-message-window): Deleted.  The trick with the
 	pre-command-hook doesn't work in XEmacs 21.5.  So use the standard
